--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,37 @@
-<!-- <!DOCTYPE html>
+{{!-- <form class="login-form">
+  <div>
+    <label for="email-login">email:</label>
+    <input type="text" id="email-login" />
+  </div>
+  <div>
+    <label for="password-login">password:</label>
+    <input type="password" id="password-login" />
+  </div>
+  <div>
+    <button type="submit">login</button>
+  </div>
+</form>
+
+<form class="signup-form">
+  <div>
+    <label for="username-signup">username:</label>
+    <input type="text" id="username-signup" />
+  </div>
+  <div>
+    <label for="email-signup">email:</label>
+    <input type="text" id="email-signup" />
+  </div>
+  <div>
+    <label for="password-signup">password:</label>
+    <input type="password" id="password-signup" />
+  </div>
+  <div>
+    <button type="submit">signup</button>
+  </div>
+</form>
+<script src="/javascript/login.js"></script> --}}
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +40,7 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Sign in & Sign up Form</title>
   </head>
   <body>
@@ -104,7 +137,6 @@
         </div>
       </div>
     </div>
-
-    <script src="app.js"></script>
   </body>
-</html> -->
+</html>
+<script src="/public/javascript/login.js"></script>
