--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,12 @@
       {{{ body }}}
     </main>
   </div>
-
+<nav>
+  <button id="logout" class="btn-no-style">logout</button>
+  <a href="/login">login</a>
+</nav>
+<script src="/javascript/login.js"></script>
+<script src="/javascript/logout.js"></script>
 </body>
 
 </html>
