--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-{{!-- <form class="login-form">
+<form class="login-form">
   <div>
     <label for="email-login">email:</label>
     <input type="text" id="email-login" />
@@ -29,11 +29,11 @@
     <button type="submit">signup</button>
   </div>
 </form>
-<script src="/javascript/login.js"></script> --}}
+<script src="/javascript/login.js"></script>
 
 
 
-    <div class="container">
+    {{!-- <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
           <form action="#" class="sign-in-form" id="login-form" >
@@ -127,4 +127,4 @@
       </div>
     </div>
   
-<script src="/javascript/login.js"></script>
+<script src="/javascript/login.js"></script> --}}
