--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,8 +22,7 @@
   <button id="logout" class="btn-no-style">logout</button>
   <a href="/login">login</a>
 </nav>
-<script src="/javascript/login.js"></script>
-<script src="/javascript/logout.js"></script>
+{{!-- <script src="/javascript/login.js"></script> --}}
 </body>
-
+<script src="/javascript/logout.js"></script>
 </html>
