--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form class="login-form">
+{{!-- <form class="login-form" id="login-form">
   <div>
     <label for="email-login">email:</label>
     <input type="text" id="email-login" />
@@ -12,7 +12,7 @@
   </div>
 </form>
 
-<form class="signup-form">
+<form class="signup-form" id="signup-form">
   <div>
     <label for="username-signup">username:</label>
     <input type="text" id="username-signup" />
@@ -29,14 +29,14 @@
     <button type="submit">signup</button>
   </div>
 </form>
-<script src="/javascript/login.js"></script>
+<script src="/javascript/login.js"></script> --}}
 
 
 
-    {{!-- <div class="container">
+    <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
-          <form action="#" class="sign-in-form" id="login-form" >
+          <form class="sign-in-form" id="login-form" >
             <h2 class="title">Sign in</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
@@ -63,7 +63,7 @@
               </a>
             </div>
           </form>
-          <form action="#" class="sign-up-form" id="signup-form">
+          <form class="sign-up-form" id="signup-form">
             <h2 class="title">Sign up</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
@@ -127,4 +127,4 @@
       </div>
     </div>
   
-<script src="/javascript/login.js"></script> --}}
+<script src="/javascript/login.js"></script>
