--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,28 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>...</title>
+     <link rel="stylesheet" href="/stylesheets/webpage.css">
+ </head> 
+ <body>
+     <nav class="navbar">
+     <ul>
+         <li><a href='#Phones'>Phones</a></li>
+         <li><a href='#Computers'>Computers</a></li>
+         <li><a href='#Tv'>Tv</a></li>
+         <li><a href='#Gameconsole'>Game Consoles</a></li>
+     </ul>
+     </nav>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Electro_Enthusiast</title>
-  <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"
-    ></script>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
+    <div class="top-bar">
+        <h1>
+            My Forum
+        </h1>
+    </div>
+    <div class="main">
+  <ol>
+      <li class="row">
+          <a href="/posts">
+          <h4 class="title">
+            PS5 Digital Edition
+          </h4>
+          <div class="bottom">
+              <p class="timestamp">
+                11/4/2021
+              </p>
+              <p class="comment-count">
+                2 comments
+              </p>
+            </div>
+        </a>
+      </li>
+      <li class="row">
+        <a href="/item">
+        <h4 class="title">
+          Samsung 55"    
+        </h4>
+        <div class="bottom">
+            <p class="timestamp">
+                10/31/2021
+            </p>
+            <p class="comment-count">
+                20 comments
+            </p>
+            
+          </div>
+      </a>
+    </li>
+  </ol>
+    </div>
 
-<body>
-  <div class="wrapper">
-    <main>
-      {{{ body }}}
-    </main>
-  </div>
-<nav>
-  <button id="logout" class="btn-no-style">logout</button>
-  <a href="/login">login</a>
-</nav>
-{{!-- <script src="/javascript/login.js"></script> --}}
-</body>
-<script src="/javascript/logout.js"></script>
-</html>
+     {{!-- <section id="Phones">
+         <div class="main">
+             <h1 Class="headings">Phones</h1>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, facere soluta aliquam corporis ad harum quas dicta quasi fugiat ipsam modi delectus, rerum accusantium impedit laborum voluptatem at nesciunt voluptate.
+             </p>
+         </div>
+     </section>
+
+     <section id="Computers">
+        <h1 class="headings">Computers</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam in perspiciatis quidem rem, minima, doloribus reiciendis enim atque ad ipsa harum omnis deserunt illum quisquam fugiat fugit officiis nostrum quia.</p>
+
+         </div>
+     </section>
+
+     <section id="Tv">
+         <h1 class="headings">Tv</h1>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed dolores molestiae neque natus, dolorum rerum nulla molestias id reiciendis repudiandae enim, dignissimos labore dolore velit magni obcaecati tempore sunt?</p>
+
+     </section>
+
+     <section id="Game Consoles">
+         <h1 class="headings">Game Consoles</h1>
+
+                 <h1 class="headings">...</h1>
+             </div>
+
+         </div>
+     </section>
+
+     <section id="...">
+         <h1 class="headings">...</h1>
+         <div class="box">
+
+             <p> <form action="" class="form">
+                 <input type="text" name="name" class="input" placeholder="Enter Your Username">
+                 <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
+                 <input type="submit" value="SEND" id="send"> </p>
+         </div>
+
+     </section> --}}
+ </body>
+ </html> 
