--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,37 +1,31 @@
-{{!-- <form class="login-form" id="login-form">
-  <div>
-    <label for="email-login">email:</label>
-    <input type="text" id="email-login" />
-  </div>
-  <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit">login</button>
-  </div>
-</form>
+<!DOCTYPE html>
+<html lang="en">
 
-<form class="signup-form" id="signup-form">
-  <div>
-    <label for="username-signup">username:</label>
-    <input type="text" id="username-signup" />
-  </div>
-  <div>
-    <label for="email-signup">email:</label>
-    <input type="text" id="email-signup" />
-  </div>
-  <div>
-    <label for="password-signup">password:</label>
-    <input type="password" id="password-signup" />
-  </div>
-  <div>
-    <button type="submit">signup</button>
-  </div>
-</form>
-<script src="/javascript/login.js"></script> --}}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Electro_Enthusiast</title>
+  <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
+  <link rel="stylesheet" href="/stylesheets/style.css">
+</head>
 
-
+<body>
+  <div class="wrapper">
+    <main>
+      {{{ body }}}
+    </main>
+  </div>
+<nav>
+  <button id="logout" class="btn-no-style">logout</button>
+  <a href="/login">login</a>
+</nav>
+{{!-- <script src="/javascript/login.js"></script> --}}
+</body>
+<script src="/javascript/logout.js"></script>
+</html>
 
     <div class="container">
       <div class="forms-container">
@@ -102,8 +96,7 @@
           <div class="content">
             <h3>New here ?</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-              ex ratione. Aliquid!
+              Welcome Electro_Enthusiast, not a member? Sign up here!
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Sign up
@@ -115,8 +108,7 @@
           <div class="content">
             <h3>One of us ?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              laboriosam ad deleniti.
+              Welcome back Electro_Enthusiast! Log in, we can't wait to hear from you!
             </p>
             <button class="btn transparent" id="sign-in-btn">
               Sign in
