--- a/views/webpage.handlebars
+++ b/views/webpage.handlebars
@@ -19,7 +19,7 @@
      <section id="Phones">
          <div class="main">
              <h1 Class="headings">Phones</h1>
-             <p>=Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, facere soluta aliquam corporis ad harum quas dicta quasi fugiat ipsam modi delectus, rerum accusantium impedit laborum voluptatem at nesciunt voluptate.
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, facere soluta aliquam corporis ad harum quas dicta quasi fugiat ipsam modi delectus, rerum accusantium impedit laborum voluptatem at nesciunt voluptate.
              </p>
          </div>
      </section>
