--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Electro_Enthusiast</title>
   <script
       src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"
-    ></script>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
+      crossorigin="anonymous"></script>
+  
 
-<body>
-  <div class="wrapper">
-    <main>
-      {{{ body }}}
-    </main>
-  </div>
-<nav>
-  <button id="logout" class="btn-no-style">logout</button>
-  <a href="/login">login</a>
-</nav>
-{{!-- <script src="/javascript/login.js"></script> --}}
-</body>
-<script src="/javascript/logout.js"></script>
-</html>
 
     <div class="container">
       <div class="forms-container">
