--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -68,32 +68,82 @@
  </body>
  </html>  --}}
  
+ 
 <section id="Phones">
          <div class="main">
              <h1 Class="headings">Phones</h1>
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, facere soluta aliquam corporis ad harum quas dicta quasi fugiat ipsam modi delectus, rerum accusantium impedit laborum voluptatem at nesciunt voluptate.
+             <h4 class="title">
+          IPHONE 11
+          </h4>
+             <p>Great phone.  I bought one for myself a year ago and really like it.  So, I  bought one for my husband last week.  He is happy with his too.  The Best Buy  phone department at Branson is great.  They are so helpful and "know their stuff." Thank you, Joseph.
              </p>
+             <p class="timestamp">
+                11/4/2021
+              </p>
+         </div>
+
+         <h4 class="title">
+          SAMSUNG S20
+        </h4>
+             <p>Very nice phone that supports hdmi and Dex.  Especially for the price. Great 5g signal out in the country. iPhone seems to pick lte instead of 5g.
+             </p>
+             <p class="timestamp">
+                10/10/2021
+              </p>
+         </div>
+
+     </section>
+
+     <section id="TV">
+        <h1 class="headings">TV</h1>
+        <h4 class="title">
+          LG 24"
+        </h4>
+             <p>The LG 24” LED HD TV was just what we were looking for to place in our kitchen. The color & clarity of the picture are superb for this size screen. In addition we are very pleased with the sound quality. We use this TV for catching up on news or weather. Mostly in 30 minutes segments. However, I do tune into Pandora occasionally and the sound is pretty darn good for music listening as well. Very, very pleased with our purchase!
+             </p>
+             <p class="timestamp">
+                1/23/2020
+              </p>
+
          </div>
      </section>
 
      <section id="Computers">
-        <h1 class="headings">Computers</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam in perspiciatis quidem rem, minima, doloribus reiciendis enim atque ad ipsa harum omnis deserunt illum quisquam fugiat fugit officiis nostrum quia.</p>
-
-         </div>
-     </section>
-
-     <section id="Tv">
-         <h1 class="headings">Tv</h1>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident sed dolores molestiae neque natus, dolorum rerum nulla molestias id reiciendis repudiandae enim, dignissimos labore dolore velit magni obcaecati tempore sunt?</p>
-
+         <h1 class="headings">Computers</h1>
+         <h4 class="title">
+          2014 MAC AIR
+        </h4>
+             <p>I've purchased this model of the MacBook; the day after Christmas. When I bought it, I fell in love with it. I bought the Gold Color; which I thought was cute. Although the MacBook came with the 256GB which I thought was enough. I bought this MacBook for online school, it is so flawless. I love the quietness, no viruses and the compatibility. It is very fast. This is my first MacBook and I will keep it forever.
+             </p>
+             <p class="timestamp">
+                10/03/2021
+              </p>
      </section>
 
      <section id="Game Consoles">
          <h1 class="headings">Game Consoles</h1>
-
-                 <h1 class="headings">...</h1>
+          <h4 class="title">
+          NINTENDO SWITCH ANIMAL CROSSING EDITION
+        </h4>
+             <p>What can I say? It's a Nintendo Switch, which in itself, is a great system, but the special edition is just so charming and wholesome to look at. Every aspect of this is special, including the all-white dock, print on the back of console, pastel joy-con with white backs, and even the wrist straps follow the theme. One of the best special edition consoles I've seen in years.
+             </p>
+             <p class="timestamp">
+                08/15/2021
+              </p>
              </div>
+
+            <h1 class="headings">Game Consoles</h1>
+          <h4 class="title">
+          PS5
+        </h4>>
+             <p>An actual buyer here!!! The console has been great. No issues so far (Crosses fingers). No glitches (like many who don’t work in the tech field claim). I’ve tried plenty of PS4 games and they all work normal. I have Spiderman, 2K, COD and Valhalla and they are all good games. The adaptive triggers on the controller definitely stand out as a highlight. I turn them off for multiplayer in COD because they can be a distraction. 
+
+I’m sure the Xbox has some benefits, but I’m sticking with Sony. Hope everyone is able to get the console they want.
+             </p>
+             <p class="timestamp">
+                05/01/2021
+              </p>
+             </div> 
 
          </div>
      </section>
