--- a/public/stylesheets/webpage.css
+++ b/public/stylesheets/webpage.css
@@ -239,6 +239,7 @@ p {
     display: flex;
     color: black;
     font-size: 15px;
+    font-weight: bold;
 }
 .timestamp {
     padding-left: 10px;
