--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -77,9 +77,14 @@
           </h4>
              <p>Great phone.  I bought one for myself a year ago and really like it.  So, I  bought one for my husband last week.  He is happy with his too.  The Best Buy  phone department at Branson is great.  They are so helpful and "know their stuff." Thank you, Joseph.
              </p>
+             <div class="bottom">
              <p class="timestamp">
                 11/4/2021
               </p>
+              <p class="user">
+                    BUSYBEE89
+                </p>
+                <p> Price: $1,200</p>
          </div>
 
          <h4 class="title">
@@ -87,9 +92,13 @@
         </h4>
              <p>Very nice phone that supports hdmi and Dex.  Especially for the price. Great 5g signal out in the country. iPhone seems to pick lte instead of 5g.
              </p>
+             <div class="bottom">
              <p class="timestamp">
                 10/10/2021
               </p>
+              <p class="user">
+                    MEANDAWG78
+                </p>
          </div>
 
      </section>
@@ -101,10 +110,13 @@
         </h4>
              <p>The LG 24” LED HD TV was just what we were looking for to place in our kitchen. The color & clarity of the picture are superb for this size screen. In addition we are very pleased with the sound quality. We use this TV for catching up on news or weather. Mostly in 30 minutes segments. However, I do tune into Pandora occasionally and the sound is pretty darn good for music listening as well. Very, very pleased with our purchase!
              </p>
+             <div class="bottom">
              <p class="timestamp">
                 1/23/2020
               </p>
-
+            <p class="user">
+                    TVGAWD01
+                </p>
          </div>
      </section>
 
@@ -115,9 +127,14 @@
         </h4>
              <p>I've purchased this model of the MacBook; the day after Christmas. When I bought it, I fell in love with it. I bought the Gold Color; which I thought was cute. Although the MacBook came with the 256GB which I thought was enough. I bought this MacBook for online school, it is so flawless. I love the quietness, no viruses and the compatibility. It is very fast. This is my first MacBook and I will keep it forever.
              </p>
+             <div class="bottom">
              <p class="timestamp">
                 10/03/2021
               </p>
+              <p class="user">
+                    MadMaxxx
+                </p>
+             </div>
      </section>
 
      <section id="Game Consoles">
@@ -127,11 +144,14 @@
         </h4>
              <p>What can I say? It's a Nintendo Switch, which in itself, is a great system, but the special edition is just so charming and wholesome to look at. Every aspect of this is special, including the all-white dock, print on the back of console, pastel joy-con with white backs, and even the wrist straps follow the theme. One of the best special edition consoles I've seen in years.
              </p>
+             <div class="bottom">
              <p class="timestamp">
                 08/15/2021
               </p>
+              <p class="user">
+                    prettygoat23
+                </p>
              </div>
-
             <h1 class="headings">Game Consoles</h1>
           <h4 class="title">
           PS5
@@ -140,8 +160,12 @@
 
 I’m sure the Xbox has some benefits, but I’m sticking with Sony. Hope everyone is able to get the console they want.
              </p>
+             <div class="bottom">
              <p class="timestamp">
                 05/01/2021
+              </p>
+              <p class="user">
+                BLUEBOY3
               </p>
              </div> 
 
