--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,9 +65,10 @@ form.sign-in-form {
 }
 
 .title {
-  font-size: 2.2rem;
+  font-size: 24;
   color: #444;
   margin-bottom: 10px;
+  font-style: italic;
 }
 
 .input-field {
@@ -405,4 +406,11 @@ form.sign-in-form {
   .timestamp {
     padding-left: 10px;
   }
+
+  .bottom {
+    display: flex;
+    color: black;
+    font-size: 15px;
+    font-weight: bold;
+}
 }
