--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,14 @@
- <nav class="navbar">
+{{#each posts as |post|}}
+
+{{> post-info post }}
+</div>
+
+{{else}}
+<h6 class="pb-4 has-text-centered is-italic">there are currently no posts</h6>
+{{/each}} 
+ 
+ 
+ {{!-- <nav class="navbar">
      <ul>
          <li><a href='#Phones'>Phones</a></li>
          <li><a href='#Computers'>Computers</a></li>
@@ -23,4 +33,4 @@
         </article>
     </li>
     {{/each}}
-</ol>
+</ol> --}}
