--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,138 @@
      <link rel="stylesheet" href="/stylesheets/style.css"
  </head>
 
-     {{!-- <nav class="navbar">
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>
+        <a href="/">Electro_Enthusiast</a>
+      </h1>
+      <nav>
+       {{#if loggedIn}}
+       <a href="/views/dashboard.handlebars">dashboard</a>
+        <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/public/javascript/login.js">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main>
+      {{{ body }}}
+    </main>
+    <footer>
+      Come back soon!
+    </footer>
+  </div>
+  
+  {{#if loggedIn}}
+  <script src="/public/javascript/logout.js"></script>
+  {{/if}}
+
+</body>
+
+  <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"></script>
+  
+
+
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
+          <form class="sign-in-form" id="login-form" >
+            <h2 class="title">Sign in</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Username" id="email-login" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password"  id="password-login"/>
+            </div>
+            <input type="submit" value="Login" class="btn solid" />
+            <p class="social-text">Or Sign in with social platforms</p>
+            <div class="social-media">
+              <a href="#" class="social-icon">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-google"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </div>
+          </form>
+          <form class="sign-up-form" id="signup-form">
+            <h2 class="title">Sign up</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Username"  id="username-signup"/>
+            </div>
+            <div class="input-field">
+              <i class="fas fa-envelope"></i>
+              <input type="email" placeholder="Email" id="email-signup"/>
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" id="password-signup"/>
+            </div>
+            <input type="submit" class="btn" value="Sign up" />
+            <p class="social-text">Or Sign up with social platforms</p>
+            <div class="social-media">
+              <a href="#" class="social-icon">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-google"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h3>New here ?</h3>
+            <p>
+              Welcome Electro_Enthusiast, not a member? Sign up here!
+            </p>
+            <button class="btn transparent" id="sign-up-btn">
+              Sign up
+            </button>
+          </div>
+          <img src="img/log.svg" class="image" alt="" />
+        </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <h3>One of us ?</h3>
+            <p>
+              Welcome back Electro_Enthusiast! Log in, we can't wait to hear from you!
+            </p>
+            <button class="btn transparent" id="sign-in-btn">
+              Sign in
+            </button>
+          </div>
+          <img src="img/register.svg" class="image" alt="" />
+        </div>
+      </div>
+    </div>
+  
+<script src="/public/javascript/login.js"></script>
+
+</html>
+    
+    {{!-- <nav class="navbar">
      <ul>
          <li><a href='#Phones'>Phones</a></li>
          <li><a href='#Computers'>Computers</a></li>
@@ -18,11 +149,11 @@
 
      </ul>
      </nav> --}}
-  <div class="wrapper">
+  {{!-- <div class="wrapper">
     <main>
       {{{ body }}}
     </main>
-  </div>
+  </div> --}}
 
     {{!-- <div class="top-bar">
         <h1>
@@ -68,7 +199,7 @@
  </body>
  </html>  --}}
  
- 
+{{!--  
 <section id="Phones">
          <div class="main">
              <h1 Class="headings">Phones</h1>
@@ -184,4 +315,4 @@ I’m sure the Xbox has some benefits, but I’m sticking with Sony. Hope everyo
 
      </section>
      <script src="/javascript/logout.js"></script>
-     </body>
+     </body> --}}
