--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,6 @@
 <article class="post">
   <div class="title">
-    <header class="card-header card-header-title has-background-grey-lighter">
+    <header>
       <div class="column">
          <a href="/post/{{id}}">{{title}}</a>
      </div>
