--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -24,7 +24,7 @@
 
 <form class="comment-form">
   <div>
-    <textarea name="content"></textarea>
+    <textarea name="comment_text"></textarea>
   </div>
 
   <div>
