--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,11 @@
+
 {{#each posts as |post|}}
 
 {{> post-info post }}
 </div>
 
 {{else}}
-<h6 class="pb-4 has-text-centered is-italic">there are currently no posts</h6>
+<h4 class="pb-4 has-text-centered is-italic">No posts yet!</h4>
 {{/each}} 
  
  
