--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,5 @@
-
-  <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"></script>
+ <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
   
-
 
     <div class="container">
       <div class="forms-container">
@@ -19,6 +15,9 @@
               <input type="password" placeholder="Password"  id="password-login"/>
             </div>
             <input type="submit" value="Login" class="btn solid" />
+
+
+
             <p class="social-text">Or Sign in with social platforms</p>
             <div class="social-media">
               <a href="#" class="social-icon">
@@ -35,6 +34,8 @@
               </a>
             </div>
           </form>
+
+
           <form class="sign-up-form" id="signup-form">
             <h2 class="title">Sign up</h2>
             <div class="input-field">
@@ -50,6 +51,7 @@
               <input type="password" placeholder="Password" id="password-signup"/>
             </div>
             <input type="submit" class="btn" value="Sign up" />
+            
             <p class="social-text">Or Sign up with social platforms</p>
             <div class="social-media">
               <a href="#" class="social-icon">
@@ -79,22 +81,6 @@
             <button class="btn transparent" id="sign-up-btn">
               Sign up
             </button>
-          </div>
-          <img src="img/log.svg" class="image" alt="" />
-        </div>
-        <div class="panel right-panel">
-          <div class="content">
-            <h3>One of us ?</h3>
-            <p>
-              Welcome back Electro_Enthusiast! Log in, we can't wait to hear from you!
-            </p>
-            <button class="btn transparent" id="sign-in-btn">
-              Sign in
-            </button>
-          </div>
-          <img src="img/register.svg" class="image" alt="" />
-        </div>
-      </div>
-    </div>
+            
   
-<script src="/public/javascript/login.js"></script>
+<script src="/javascript/login.js"></script>
