--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -5,7 +5,7 @@
       {{user.username}} on {{created_at}}
     </div>
     <div class="text">
-      {{content}}
+      {{comment_text}}
     </div>
   </section>
   {{/each}}
