--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <a href="/views/dashboard.handlebars"> &larr; Back to dashboard</a>
+  <a href="/dashboard"> &larr; Back to dashboard</a>
   <h2>
     Edit Post
   </h2>
@@ -34,6 +34,6 @@
 
 {{> comments post.comments}}
 
-<script src="/public/javascript/edit-posts.js"></script>
-<script src="/public/javascript/delete.posts.js"></script>
-<script src="/public/javascript/comment.js"></script>
+<script src="/javascript/edit-posts.js"></script>
+<script src="/javascript/delete.posts.js"></script>
+<script src="/javascript/comment.js"></script>
