--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,17 +4,25 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Electro_Enthusiast</title>
-     <link rel="stylesheet" href="/stylesheets/webpage.css">
      <link rel="stylesheet" href="/stylesheets/style.css">
  </head>
 
+<body>
+  <div class="wrapper">
+    {{!-- <header>
+      <h1>
+        <a href="/">Electro_Enthusiast</a>
+      </h1> --}}
       <nav>
        {{#if loggedIn}}
-       <a href="/views/dashboard.handlebars">dashboard</a>
+       <a href="/dashboard">dashboard</a>
         <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/login">login</a>
         {{/if}}
       </nav>
     </header>
+
     <main>
       {{{ body }}}
     </main>
@@ -24,11 +32,9 @@
   </div>
   
   {{#if loggedIn}}
-  <script src="/public/javascript/logout.js"></script>
+  <script src="/javascript/logout.js"></script>
   {{/if}}
 
 </body>
 
-  <script
-      src="https://kit.fontawesome.com/64d58efce2.js"
-      crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
