--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -29,4 +29,16 @@
 </section>
 {{/if}}
 
+
+<section>
+  <h2>All Posts</h2>
+  {{#each posts as |post|}}
+
+{{> post-info post }}
+</div>
+
+{{else}}
+<h6 class="pb-4 has-text-centered is-italic">there are currently no posts</h6>
+{{/each}}
+</ol> 
 <script src="/javascript/add-post.js"></script>
