--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
       <div class="title">
        {{title}}
         |
-        {{post-content}}
+        {{post_content}}
       </div>
       <div class="meta">
         <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
