--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -10,7 +10,7 @@
       <span class=""> </span>
       </div>
      <div class="card-content"></div>
-     {{post-content}}
+     {{post_content}}
         </div>
   <div class="meta">
     {{user.username}} on {{format_date created_at}}
