--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,11 +2,11 @@
   <li>
     <article class="post">
       <div class="title">
-        {{title}}</a>
-        <span>({{post_url}})</span>
+        {{title}}
+        
       </div>
       <div class="meta">
-        {{vote_count}} point(s) by {{user.username}} on
+        {{user.username}} on
         {{created_at}}
         |
         <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
