--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
     </div>
      <div>
         <label for="post-content">Post Content</label>
-      <input class="textarea" name="post-content" type="text" value="{{post.post_content}}" />
+      <input class="textarea" name="post-content" type="text" value="{{post_content}}" />
     </div>
     <div>
     <button type="submit" class="btn">Create</button>
