--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Electro_Enthusiast</title>
-     <link rel="stylesheet" href="/stylesheets/style.css">
+     <link rel="stylesheet" href="../../webpage/style.css">
+
  </head>
 
 <body>
