--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,19 +7,18 @@
      <link rel="stylesheet" href="/stylesheets/style.css">
  </head>
 
-<body>
-  <div class="wrapper">
-    {{!-- <header>
-      <h1>
-        <a href="/">Electro_Enthusiast</a>
-      </h1> --}}
-      <nav>
+  <div class="navbar" id="navbar">
        {{#if loggedIn}}
-       <a href="/dashboard">dashboard</a>
-        <button id="logout" class="btn-no-style">logout</button>
-        {{/if}}
-      </nav>
+        <a href="/dashboard" id="dashboard">dashboard</a>
+        <button id="logout" class="logout-btn">logout</button>
+  </div>
+    <div class="header">
+      <header>
+        <p>Welcome to the community. This is your place to ask questions, leave reviews, and interact with fellow electronic enthusiats. Check out new posts below and let's get to chatting!</p>
+      </h1>
+      {{/if}}
     </header>
+</div>
 
     <main>
       {{{ body }}}
@@ -33,6 +32,5 @@
   <script src="/javascript/logout.js"></script>
   {{/if}}
 
-</body>
 
   <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
