--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+
  <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
   
 
@@ -5,7 +6,7 @@
       <div class="forms-container">
         <div class="signin-signup">
           <form class="sign-in-form" id="login-form" >
-            <h2 class="title">Sign in</h2>
+            <h3 class="title">Sign in</h3>
             <div class="input-field">
               <i class="fas fa-user"></i>
               <input type="text" placeholder="Username" id="email-login" />
@@ -73,7 +74,7 @@
         <div class="panel left-panel">
           <div class="content">
             <h3>New here ?</h3>
-            <p>
+            <p class="welcome">
               Welcome Electro_Enthusiast, not a member? Sign up here!
             </p>
             <button class="btn transparent" id="sign-up-btn">
