--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,35 @@
-<section>
-  <h2>Create New Post</h2>
 
-  <form class="new-post-form">
+{{#if posts.length}}
+<section class="posts">
+  <h2>Your Posts</h2>
+  <ol class="post-list">
+    {{#each posts as |post|}}
+    <li>
+      {{> post-info post}}
+      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+    </li>
+    {{/each}}
+  </ol>
+</section>
+{{/if}}
+
+
+<section class="posts">
+  <h2>All Posts</h2>
+    <ol class="post-list">
+      {{#each posts as |post|}}
+    <li>
+      {{> post-info post }}
+    </li>
+{{else}}
+<h6 class="pb-4 has-text-centered is-italic">there are currently no posts</h6>
+{{/each}}
+</ol> 
+  </section>
+  
+  <section class="posts">
+    <h2>Create New Post</h2>
+    <form class="new-post-form">
     <div>
       <label for="post-title">Title</label>
       <input type="text" id="post-title" name="post-title" />
@@ -14,31 +42,5 @@
     <button type="submit" class="btn">Create</button>
   </form>
 </section>
-
-{{#if posts.length}}
-<section>
-  <h2>Your Posts</h2>
-  <ol>
-    {{#each posts as |post|}}
-    <li>
-      {{> post-info post}}
-      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-    </li>
-    {{/each}}
-  </ol>
-</section>
-{{/if}}
-
-
-<section>
-  <h2>All Posts</h2>
-  {{#each posts as |post|}}
-
-{{> post-info post }}
-</div>
-
-{{else}}
-<h6 class="pb-4 has-text-centered is-italic">there are currently no posts</h6>
-{{/each}}
-</ol> 
 <script src="/javascript/add-post.js"></script>
+
