--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,28 @@
+
 <ol class="post-list">
+  {{#each posts as |post|}}
+  <li>
+    <article class="post">
+      <div class="title">
+         <a href="/post/{{id}}">{{title}}</a>
+     </div>
+  <div class="meta">
+    <span class ="finePrint">By {{user.username}} on {{format_date created_at}}</span>
+  </div>  
+  <div class="post-content">{{post_content}}</div>
+  <div>
+    <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+    </div>
+  </article>
+</li>
+  {{/each}}
+  </ol>
+
+
+
+
+
+{{!-- <ol class="post-list">
   <li>
     <article class="post">
       <div class="title">
@@ -13,7 +37,7 @@
       </div>
     </article>
   </li>
-</ol>
+</ol> --}}
  
  
  {{!-- <nav class="navbar">
