--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -2,9 +2,9 @@
   {{#each this}}
   <section class="comment">
     <div class="meta">
-      {{user.username}} on {{created_at}}
+      {{user.username}} on {{format_date created_at}}
     </div>
-    <div class="text">
+    <div class="comment_text">
       {{comment_text}}
     </div>
   </section>
