--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,25 +1,15 @@
 <article class="post">
-  <div class="title">
-    <header>
-      <div class="column">
+<div class="title">
          <a href="/post/{{id}}">{{title}}</a>
      </div>
-     </header>
-
-     <div class="column">
-      <span class=""> </span>
-      </div>
-     <div class="card-content"></div>
-     {{post_content}}
-        </div>
   <div class="meta">
-    {{user.username}} on {{format_date created_at}}
-    |
+    <span class ="finePrint">By {{user.username}} on {{format_date created_at}}</span>
+  </div>  
+  <div class="post-content">{{post_content}}</div>
+  <div>
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
-  </div>
+</div>
 </article>
-
-
 
 {{!-- <ol class="post-list">
     {{#each posts as |post|}}
