--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,7 +49,7 @@ html{
 }
 
 .header{
-  border: solid 1px #52057b;
+  border: solid 4px #52057b;
   margin: 50px;
   padding: 40px;
   display: flex;
@@ -84,7 +84,7 @@ h2 {
   text-align: center;
 }
 
-.posts {
+#posts {
   display: flex;
   flex-direction: column;
   background-color: rgb(0,0,0);;
