--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,23 @@
 
+  <section class="posts">
+    <h2>Create New Post</h2>
+    <form class="new-post-form">
+    <div>
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title" />
+    </div>
+     <div>
+        <label for="post_content">Post Content</label>
+      <input class="textarea" name="post_content" type="text" value="{{post_content}}" />
+    </div>
+    <div>
+    <button type="submit" class="btn">Create</button>
+  </form>
+</section>
+
 {{#if posts.length}}
-<section class="posts">
-  <h2>Your Posts</h2>
+<div class="col-sm-9" id="posts">
+  <h4>Your Posts</h4>
   <ol class="post-list">
     {{#each posts as |post|}}
     <li>
@@ -27,7 +43,7 @@
 </ol> 
   </section>
   
-  <section class="posts">
+  {{!-- <section class="posts">
     <h2>Create New Post</h2>
     <form class="new-post-form">
     <div>
@@ -41,6 +57,6 @@
     <div>
     <button type="submit" class="btn">Create</button>
   </form>
-</section>
+</section> --}}
 <script src="/javascript/add-post.js"></script>
 
