--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,22 +1,22 @@
-<article class="post">
+
 <div class="title">
-         <a href="/post/{{id}}">{{title}}</a>
-     </div>
+         <h4><a href="/post/{{id}}">{{title}}</a></h4>
   <div class="meta">
-    <span class ="finePrint">By {{user.username}} on {{format_date created_at}}</span>
+   <h5>By {{user.username}} on {{format_date created_at}}</span></h5>
   </div>  
   <div class="post-content">{{post_content}}</div>
   <div>
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
 </div>
-</article>
+</section>
+
 
 {{!-- <ol class="post-list">
     {{#each posts as |post|}}
     <li>
         <article class="post">
             <div class="title">
-                <a href="/">{{title}}</a
+                <a href="/">{{title}}</a>
                 ></div>
             <div class="meta">
                 {{user.username}} on {{created_at}}
