--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,14 +13,16 @@
 {{#if loggedIn}}
 <nav>
   <div class="navbar" id="navbar">
-        <a href="/dashboard" id="dashboard">dashboard</a>
+        <a href="#" id="my-account"><span class="glyphicon glyphicon-user"></span>My Account</a>
+        <a href="#" id="dashboard">dashboard</a>
         <button id="logout" class="logout-btn">logout</button>
+        
+      </ul>
   </div>
 </nav>
     <div class="header">
       <header>
         <p>Welcome to the community. This is your place to ask questions, leave reviews, and interact with fellow electronic enthusiats. Check out new posts below and let's get to chatting!</p>
-      </h1>
       {{/if}}
     </header>
 </div>
