--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,24 +1,23 @@
 
   <section class="posts">
+    <form class="new-post-form"></form>
     <h2>Create New Post</h2>
-    <form class="new-post-form">
-    <div>
-      <label for="title">Title</label>
-      <input type="text" id="title" name="title" />
+      <label for="post-title">Title</label>
+      <input class="textarea" type="text" id="post-title" name="post-title" />
     </div>
      <div>
-        <label for="post_content">Post Content</label>
-      <input class="textarea" name="post_content" type="text" value="{{post_content}}" />
+        <label for="post-content">Post Content</label>
+      <input class="textarea" name="post-content" type="text" value="{{post_content}}" />
     </div>
-    <div>
-    <button type="submit" class="btn">Create</button>
+    <button type="submit" class="button" id="post-btn">Post</button>
   </form>
 </section>
+<br><br>
 
 {{#if posts.length}}
-<div class="col-sm-9" id="posts">
-  <h4>Your Posts</h4>
-  <ol class="post-list">
+<section class="posts">
+  <h2>Your Posts</h2>
+  <ol>
     {{#each posts as |post|}}
     <li>
       {{> post-info post}}
@@ -28,10 +27,11 @@
   </ol>
 </section>
 {{/if}}
+<br><br>
 
-
+{{#if posts.length}}
 <section class="posts">
-  <h2>All Posts</h2>
+  <h2>Recent Posts</h2>
     <ol class="post-list">
       {{#each posts as |post|}}
     <li>
@@ -42,7 +42,8 @@
 {{/each}}
 </ol> 
   </section>
-  
+  {{/if}}
+  <br><br>
   {{!-- <section class="posts">
     <h2>Create New Post</h2>
     <form class="new-post-form">
