--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,13 +1,14 @@
-
-<div class="title">
-         <h4><a href="/post/{{id}}">{{title}}</a></h4>
-  <div class="meta">
-   <h5>By {{user.username}} on {{format_date created_at}}</span></h5>
-  </div>  
-  <div class="post-content">{{post_content}}</div>
-  <div>
+<div class="row col-sm-9">
+    <div class="post">
+        <div class="title">
+             <h4><a href="/post/{{id}}">{{title}}</a></h4>
+        </div>
+    <div class="meta">
+        <h5>By {{user.username}} on {{format_date created_at}}</span></h5></div>  
+        <div class="post-content">{{post_content}}</div>
+    <div>
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
-</div>
+</div></div></div>
 </section>
 
 
