--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,9 @@
 
   <section class="posts">
-    <form class="new-post-form"></form>
-    <h2>Create New Post</h2>
+     <h2>Create New Post</h2>
+    <form class="new-post-form">
       <label for="post-title">Title</label>
       <input class="textarea" type="text" id="post-title" name="post-title" />
-    </div>
-     <div>
         <label for="post-content">Post Content</label>
       <input class="textarea" name="post-content" type="text" value="{{post_content}}" />
     </div>
@@ -15,7 +13,7 @@
 <br><br>
 
 {{#if posts.length}}
-<section class="posts">
+<section class="post-list">
   <h2>Your Posts</h2>
   <ol>
     {{#each posts as |post|}}
@@ -30,7 +28,6 @@
 <br><br>
 
 {{#if posts.length}}
-<section class="posts">
   <h2>Recent Posts</h2>
     <ol class="post-list">
       {{#each posts as |post|}}
@@ -41,23 +38,8 @@
 <h6 class="pb-4 has-text-centered is-italic">there are currently no posts</h6>
 {{/each}}
 </ol> 
-  </section>
   {{/if}}
-  <br><br>
-  {{!-- <section class="posts">
-    <h2>Create New Post</h2>
-    <form class="new-post-form">
-    <div>
-      <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" />
-    </div>
-     <div>
-        <label for="post-content">Post Content</label>
-      <input class="textarea" name="post-content" type="text" value="{{post_content}}" />
-    </div>
-    <div>
-    <button type="submit" class="btn">Create</button>
-  </form>
-</section> --}}
+
+
 <script src="/javascript/add-post.js"></script>
 
