--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,26 +1,26 @@
-<article>
+<section class="posts">
   <a href="/dashboard"> &larr; Back to dashboard</a>
   <h2>
     Edit Post
   </h2>
   <form class="edit-post-form">
-    <form class="edit-post-form">
     <div>
-        <label for="post-title">post title:</label>
-      <input class="input" name="post-title" type="text" value="{{post.title}}" />
+      <label for="post-title">Title</label>
+      <input name="post-title" type="text" value="{{post.title}}" />
     </div>
     <div>
-        <label for="post-content">post content:</label>
+        <label for="post-content">Post Content:</label>
       <input class="textarea" name="post-content" type="text" value="{{post.post_content}}" />
     </div>
     <div>
         created by you on {{format_date post.created_at}}
+        |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
-    <button type="submit" id="post-btn">Save post</button>
-    <button type="button" class="delete-post-btn" id="post-btn">Delete post</button>
+    <button type="submit" > Save post</button>
+    <button type="submit" class="delete-post-btn" id="post-btn">Delete post</button>
   </form>
-</article>
+</section>
 
 <form class="comment-form">
   <div>
