--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,16 +1,14 @@
-<section class="posts">
+<section class="edit-post">
   <a href="/dashboard"> &larr; Back to dashboard</a>
   <h2>
     Edit Post
   </h2>
   <form class="edit-post-form">
     <div>
-      <label for="post-title">Title</label>
-      <input name="post-title" type="text" value="{{post.title}}" />
+       <input name="post-title" type="text" value="{{post.title}}" />
     </div>
     <div>
-        <label for="post-content">Post Content:</label>
-      <input class="textarea" name="post-content" type="text" value="{{post.post_content}}" />
+       <textarea name="post-content"> {{post_content}}</textarea>
     </div>
     <div>
         created by you on {{format_date post.created_at}}
